fixed html padding and margins to avoid clipping bottom of page on mobile

--- a/static/article_template_styles.css
+++ b/static/article_template_styles.css
@@ -9,7 +9,8 @@ html {
     background: #121212;
     font-family: 'Source Code Pro', sans-serif;
     -webkit-font-smoothing: antialiased;
-    margin-bottom: 20%;
+    margin-bottom: 10%;
+    padding-bottom: 15%;
 }
 
 body{
